search: input: fix alignment with query

--- a/resources/scss/search.scss
+++ b/resources/scss/search.scss
@@ -40,6 +40,7 @@
   .search-input-autocomplete {
     position: absolute;
     top: 0.07em;
+    left: 0.2em;
     z-index: -1;
     // font-weight: 300;
     border: 1px solid transparent;
